// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=false\` because there is no active data integration 1`] = `
<ContextProvider
  value={null}
>
  <InfobarCustomerInfoContainer
    actions={
      Object {
        "generateAndSetWidgets": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[Function]}
    hasIntegrations={false}
    isEditing={false}
    sources={Immutable.Map {}}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type bigcommerce 1`] = `
<ContextProvider
  value={null}
>
  <InfobarCustomerInfoContainer
    actions={
      Object {
        "generateAndSetWidgets": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[Function]}
    hasIntegrations={true}
    isEditing={false}
    sources={Immutable.Map {}}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type http 1`] = `
<ContextProvider
  value={null}
>
  <InfobarCustomerInfoContainer
    actions={
      Object {
        "generateAndSetWidgets": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[Function]}
    hasIntegrations={true}
    isEditing={false}
    sources={Immutable.Map {}}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type magento2 1`] = `
<ContextProvider
  value={null}
>
  <InfobarCustomerInfoContainer
    actions={
      Object {
        "generateAndSetWidgets": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[Function]}
    hasIntegrations={true}
    isEditing={false}
    sources={Immutable.Map {}}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type recharge 1`] = `
<ContextProvider
  value={null}
>
  <InfobarCustomerInfoContainer
    actions={
      Object {
        "generateAndSetWidgets": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[Function]}
    hasIntegrations={true}
    isEditing={false}
    sources={Immutable.Map {}}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type shopify 1`] = `
<ContextProvider
  value={null}
>
  <InfobarCustomerInfoContainer
    actions={
      Object {
        "generateAndSetWidgets": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[Function]}
    hasIntegrations={true}
    isEditing={false}
    sources={Immutable.Map {}}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type smile 1`] = `
<ContextProvider
  value={null}
>
  <InfobarCustomerInfoContainer
    actions={
      Object {
        "generateAndSetWidgets": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[Function]}
    hasIntegrations={true}
    isEditing={false}
    sources={Immutable.Map {}}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and a "generate widgets" button because customer data are loaded, the user is currently editing widgets, it is not currently dragging anything and widgets are currently empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-edition"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
  </div>
  <GenerateButton
    setEditedWidgets={[MockFunction]}
    setEditionAsDirty={[MockFunction]}
    sources={
      Immutable.Map {
        "ticket": Immutable.Map {
          "customer": Immutable.Map {
            "integrations": Immutable.Map {
              "118": Immutable.Map {
                "foo": "bar",
              },
            },
          },
        },
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
        "_internal": Immutable.Map {
          "drag": Immutable.Map {
            "isDragging": false,
          },
          "editedItems": Immutable.List [
            Immutable.Map {
              "template": Immutable.Map {},
            },
          ],
          "hasFetchedWidgets": true,
        },
        "items": Immutable.List [],
      }
    }
  />
</div>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and empty widgets because customer data are loaded, the user is currently editing widgets and it is dragging a widget -- even though widgets are currently empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-edition"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
  </div>
  <ContextProvider
    value={
      Object {
        "isEditing": true,
      }
    }
  >
    <ContextProvider
      value={
        Object {
          "customerId": 1,
        }
      }
    >
      <Component
        context="ticket"
        displayTabs={true}
        editing={
          Object {
            "actions": Object {
              "generateAndSetWidgets": [MockFunction],
              "resetWidgets": [MockFunction],
              "setEditedWidgets": [MockFunction],
              "setEditionAsDirty": [MockFunction],
            },
            "canDrop": [Function],
            "isDragging": true,
            "isEditing": true,
            "state": Immutable.Map {
              "currentContext": "ticket",
              "_internal": Immutable.Map {
                "drag": Immutable.Map {
                  "isDragging": true,
                },
                "editedItems": Immutable.List [
                  Immutable.Map {
                    "template": Immutable.Map {},
                  },
                ],
                "hasFetchedWidgets": true,
              },
              "items": Immutable.List [],
            },
          }
        }
        source={
          Immutable.Map {
            "ticket": Immutable.Map {
              "customer": Immutable.Map {
                "integrations": Immutable.Map {
                  "118": Immutable.Map {
                    "foo": "bar",
                  },
                },
              },
            },
          }
        }
        widgets={
          Immutable.List [
            Immutable.Map {
              "template": Immutable.Map {},
            },
          ]
        }
      />
    </ContextProvider>
  </ContextProvider>
</div>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and the suggestion to add integrations because there is no customer data and there is no data integrations configured for the account 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-view"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
  </div>
  <AddIntegrationSuggestion />
</div>
`;

exports[`<InfobarCustomerInfo/> should render only basic customer info because customer data are loaded, the user is not editing widgets and current widgets are empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-view"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
  </div>
</div>
`;

exports[`<InfobarCustomerInfo/> should render only basic customer info because there is no customer data and there is some data integrations configured for the account 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-view"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
  </div>
</div>
`;

exports[`<InfobarCustomerInfo/> sources render basic customer info and widgets because there is customer data, the user is not editing widgets and current widgets are not empty 1`] = `
<InfobarCustomerInfoContainer
  actions={
    Object {
      "generateAndSetWidgets": [MockFunction],
      "resetWidgets": [MockFunction],
      "setEditedWidgets": [MockFunction],
      "setEditionAsDirty": [MockFunction],
    }
  }
  customer={
    Immutable.Map {
      "id": 1,
      "name": "foo",
    }
  }
  hasIntegrations={true}
  isEditing={false}
  sources={
    Immutable.Map {
      "ticket": Immutable.Map {
        "customer": Immutable.Map {
          "integrations": Immutable.Map {
            "118": Immutable.Map {
              "foo": "bar",
            },
          },
        },
      },
    }
  }
  widgets={
    Immutable.Map {
      "currentContext": "ticket",
      "_internal": Immutable.Map {
        "hasFetchedWidgets": true,
      },
      "items": Immutable.List [
        Immutable.Map {
          "id": 1,
          "context": "ticket",
          "template": Immutable.Map {
            "foo": "bar",
          },
        },
      ],
    }
  }
>
  <div
    className="widgetsList d-flex flex-column"
    data-candu-id="infobar-widgets-list-view"
  >
    <div
      className="customerInfo"
    >
      <div
        className="customerProfile"
      >
        <Avatar
          className="mr-3 rounded"
          email=""
          name="foo"
          size={50}
          style={Object {}}
        >
          <div
            className="component mr-3 rounded"
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          >
            <div
              className="initials"
              style={
                Object {
                  "fontSize": "20.833333333333336px",
                  "height": "50px",
                  "width": "50px",
                }
              }
            >
              <span
                style={
                  Object {
                    "lineHeight": "52px",
                  }
                }
              >
                f
              </span>
            </div>
          </div>
        </Avatar>
        <Link
          className="displayName"
          to="/app/customer/1"
        >
          <a
            className="displayName"
            to="/app/customer/1"
          >
            foo
          </a>
        </Link>
      </div>
      <div
        className="detail"
      >
        <Component
          channels={Immutable.List []}
          customerId={1}
          customerName="foo"
        >
          <div>
            CustomerChannels
          </div>
        </Component>
      </div>
    </div>
    <Component
      context="ticket"
      displayTabs={true}
      source={
        Immutable.Map {
          "ticket": Immutable.Map {
            "customer": Immutable.Map {
              "integrations": Immutable.Map {
                "118": Immutable.Map {
                  "foo": "bar",
                },
              },
            },
          },
        }
      }
      widgets={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "context": "ticket",
            "template": Immutable.Map {
              "foo": "bar",
            },
          },
        ]
      }
    >
      <div>
        InfobarWidgets
      </div>
    </Component>
  </div>
</InfobarCustomerInfoContainer>
`;
